--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "docx": "^9.5.1",
+    "firebase": "^12.0.0",
     "mammoth": "^1.10.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/firebase": "^2.4.32",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6"
   }
