--- a/quiz-backend/.env.development.example
+++ b/quiz-backend/.env.development.example
@@ -1,7 +1,7 @@
-DATABASE_URL="your_production_database_url"
-JWT_SECRET="your_production_jwt_secret"
-NODE_ENV=production
-CORS_ORIGIN=https://yourdomain.com
+DATABASE_URL="your-development-database-url"
+JWT_SECRET="your-development-jwt-secret" # OR DELETE THIS LINE
+NODE_ENV=development
+CORS_ORIGIN=http://localhost:3000
 BASE_PATH=
 
 # SMTP
