--- a/.env.development.example
+++ b/.env.development.example
@@ -1,10 +1,10 @@
 # ===================================
-# FRONTEND PRODUCTION CONFIG (cPanel)
+# FRONTEND DEVELOPMENT CONFIG
 # ===================================
 # Copy file này thành .env khi deploy lên cPanel
 
 # API Base URL - URL của backend trên hosting
-REACT_APP_API_BASE_URL=https://yourdomain.com/api
+REACT_APP_API_BASE_URL=http://localhost:6969/api
 
 # Hoặc nếu backend ở subdomain
 # REACT_APP_API_BASE_URL=https://api.yourdomain.com
