Change env example

--- a/.env.development.example
+++ b/.env.development.example
@@ -4,7 +4,7 @@
 # Copy file này thành .env khi deploy lên cPanel
 
 # API Base URL - URL của backend trên hosting
-REACT_APP_API_BASE_URL=http://localhost:6969/api
+REACT_APP_API_BASE_URL=http://localhost:6969
 
 # Hoặc nếu backend ở subdomain
 # REACT_APP_API_BASE_URL=https://api.yourdomain.com
